--- a/01_structure/index.html
+++ b/01_structure/index.html
@@ -5,31 +5,51 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Static Website</title>
+ 
+  <link rel="stylesheet" href="style.css">
+
+  <!-- <style>
+    h1, h2 {
+      color: hotpink
+    }
+  </style> -->
 </head>
 <body>
   <nav>
-    <ul>
-      <li><a href="#">Link 1</a></li>
+    <ul class="my-list">
+      <li id="my-first-li"><a href="#">Link 1</a></li>
       <li><a href="#">Link 2</a></li>
     </ul>
   </nav>
   <header>
     <h1>My Website</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, facere.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, facere.</p>
   </header>
-  <section>
+  <section class="my-list">
     <h2>Untertitel</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, repellat?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, repellat?</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, repellat?</p>
     <img src="http://placekitten.com/200/300" alt="Kitty Cat">
     <img src="images/kittens.jpeg" alt="4 kittens in a basket">
   </section>
   <aside>
-    <ul>
+    <ul class="my-list">
       <li><a href="#">Link 1</a></li>
       <li><a href="#">Link 2</a></li>
-      <li><a href="#">Link 3</a></li>
+      <li><a href="https://google.ch">Link 3</a></li>
     </ul>
   </aside>
+
+  <div> FOO
+    <div> BAR
+      <div>
+        BAZ
+      </div>
+    </div>
+  </div>
+
   <footer>
     <small>&copy; Copyright</small>
   </footer>
