--- a/12_forms/index.html
+++ b/12_forms/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Forms</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
+  <link rel="stylesheet" href="unterricht.css">
 </head>
 <body>
 
@@ -19,7 +20,10 @@
     <input type="email" id="email" placeholder="z.B hans@gmail.com">
     <label for="message">Message</label>
     <textarea id="message" cols="30" rows="10" placeholder="Hier kommt meine Nachricht"></textarea>
-    <input type="submit" value="Send">
+    <div>
+      <input type="submit" value="Send">
+      <input type="reset" value="Reset">
+    </div>
   </form>
 </body>
 </html>
