--- a/07_example_website/index.html
+++ b/07_example_website/index.html
@@ -7,7 +7,7 @@
   <title>One Page Wonder</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@800&family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@300;800&family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,7 +23,13 @@
       <h1>One Page Wonder</h1>
       <p>Will Rock Your Socks Off</p>
       <a href="#">Learn More</a>
+      <div class="bubble left"></div>
+      <div class="bubble middle"></div>
+      <div class="bubble tr"></div>
+      <div class="bubble br"></div>
     </div>
+
+  
   </header>
   <!-- Info Sections -->
   <!-- Section 1 -->
@@ -37,7 +43,7 @@
     </div>
   </section>
   <!-- Section 2 -->
-  <section class="info">
+  <section class="info reverse">
     <article>
       <h2>For those about to rock...</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
