--- a/07_example_website/index.html
+++ b/07_example_website/index.html
@@ -11,22 +11,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav class="main-navigation">
+    <a href="#">Start Bootstrap</a>
+    <ul>
+      <li><a href="#">Sign Up</a></li>
+      <li><a href="#">Log In</a></li>
+    </ul>
+  </nav>
   <header>
-    <nav class="main-navigation">
-      <a href="#">Start Bootstrap</a>
-      <ul>
-        <li><a href="#">Sign Up</a></li>
-        <li><a href="#">Log In</a></li>
-      </ul>
-    </nav>
     <div class="header-container">
       <h1>One Page Wonder</h1>
       <p>Will Rock Your Socks Off</p>
       <a href="#">Learn More</a>
       <div class="bubble left"></div>
       <div class="bubble middle"></div>
-      <div class="bubble tr"></div>
-      <div class="bubble br"></div>
+      <div class="bubble right"></div>
     </div>
 
   
